update title + fav icon

--- a/success-payment-redirect.html
+++ b/success-payment-redirect.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thành công</title>
+    <title>Gearclub | Gaming gear</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/imgs/logo-only-figure-colored.png"
+    />
   </head>
   <body>
     <main></main>
@@ -17,7 +22,15 @@
           <h1>Thanh toán thành công, chuẩn bị chuyển hướng..</h1>
         `;
 
-        changeInDatabase();
+        setTimeout(changeInDatabase(), 2000);
+      } else {
+        document.querySelector('main').innerHTML = `
+          <h1>Thanh toán xảy ra lỗi, chuẩn bị chuyển hướng..</h1>
+        `;
+
+        setTimeout(() => {
+          window.location.replace('/');
+        }, 2000);
       }
     </script>
   </body>
