--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gearclub | Gaming gear</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/imgs/logo-only-figure-colored.png"
+    />
 
     <!-- Reset css -->
     <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Bootstrap icon -->
     <link
-        rel="stylesheet"
-        href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
+      rel="stylesheet"
+      href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
     <!-- Toast -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="./assets/css/commons/toastr.min.css" />
     <script src="./assets/js/commons/toastr.min.js"></script>
 
@@ -46,57 +56,85 @@
     <link rel="stylesheet" href="./assets/css/commons/header.css" />
     <link rel="stylesheet" href="./assets/css/commons/footer.css" />
     <link rel="stylesheet" href="./assets/css/commons/paragraph.css" />
-
-</head>
-<body>
+  </head>
+  <body>
     <div class="app">
-        <div class="sub-header">
-            <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
-    
-            <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
+      <div class="sub-header">
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
+
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
+      </div>
+
+      <header class="header"></header>
+
+      <section class="main-content">
+        <h1 class="text-center title" style="line-height: 1.4">
+          Điều khoản dịch vụ
+        </h1>
+
+        <div class="paragraph">
+          <p>
+            Chúng tôi là Công ty TNHH Gear Club có địa chỉ trụ sở tại 702 Nguyễn
+            Văn Linh, quận 7, Tp.Hồ Chí Minh, thành lập website bán hàng thương
+            mại điện tử www.gearclub.vn và đã được đăng ký chính thức với Bộ
+            Công Thương Việt Nam
+          </p>
+          <p>
+            Khi quý khách hàng truy cập vào trang website của chúng tôi có nghĩa
+            là quý khách đồng ý với các điều khoản này. Trang web có quyền thay
+            đổi, chỉnh sửa, thêm hoặc lược bỏ bất kỳ phần nào trong Điều khoản
+            mua bán hàng hóa này, vào bất cứ lúc nào. Các thay đổi có hiệu lực
+            ngay khi được đăng trên trang web mà không cần thông báo trước. Và
+            khi quý khách tiếp tục sử dụng trang web, sau khi các thay đổi về
+            Điều khoản này được đăng tải, có nghĩa là quý khách chấp nhận với
+            những thay đổi đó.
+          </p>
+          <p>
+            <a href="./shipping.html" title="Chính sách vận chuyển"
+              >Chính sách vận chuyển</a
+            >
+          </p>
+          <p>
+            <a href="./refund.html" title="Chính sách hoàn tiền"
+              >Chính sách hoàn tiền</a
+            >
+          </p>
+          <p>
+            <a href="./privacy.html" title="Chính sách bảo hành"
+              >Chính sách bảo mật</a
+            >
+          </p>
+          <p>
+            Quý khách hàng vui lòng kiểm tra thường xuyên để cập nhật những thay
+            đổi của chúng tôi.
+          </p>
         </div>
+      </section>
 
-        <header class="header"></header>
-
-        <section class="main-content">
-            <h1 class="text-center title" style="line-height: 1.4;">Điều khoản dịch vụ</h1>
-
-            <div class="paragraph">
-                <p>Chúng tôi là Công ty TNHH Gear Club có địa chỉ trụ sở tại 89 Hồ Văn Huê, P.9. Q.Phú Nhuận, Tp.Hồ Chí Minh, thành lập website bán hàng thương mại điện tử www.gearclub.vn và đã được đăng ký chính thức với Bộ Công Thương Việt Nam</p>
-                <p>Khi quý khách hàng truy cập vào trang website của chúng tôi có nghĩa là quý khách đồng ý với các điều khoản này. Trang web có quyền thay đổi, chỉnh sửa, thêm hoặc lược bỏ bất kỳ phần nào trong Điều khoản mua bán hàng hóa này, vào bất cứ lúc nào. Các thay đổi có hiệu lực ngay khi được đăng trên trang web mà không cần thông báo trước. Và khi quý khách tiếp tục sử dụng trang web, sau khi các thay đổi về Điều khoản này được đăng tải, có nghĩa là quý khách chấp nhận với những thay đổi đó.</p>
-                <p><a href="./shipping.html" title="Chính sách vận chuyển">Chính sách vận chuyển</a></p>
-                <p><a href="./refund.html" title="Chính sách hoàn tiền">Chính sách hoàn tiền</a></p>
-                <p><a href="./privacy.html" title="Chính sách bảo hành">Chính sách bảo mật</a></p>
-                <p>Quý khách hàng vui lòng kiểm tra thường xuyên để cập nhật những thay đổi của chúng tôi.</p>
-            </div>
-        </section>
-
-        <footer class="footer"></footer>
+      <footer class="footer"></footer>
     </div>
 
     <script type="module">
-        import { renderHeader } from './assets/js/commons/header/header.js';
-        import { renderFooter } from './assets/js/commons/footer.js';
-  
-        const header = document.querySelector('header.header');
-        renderHeader(header);
+      import { renderHeader } from './assets/js/commons/header/header.js';
+      import { renderFooter } from './assets/js/commons/footer.js';
 
-        const footer = document.querySelector('footer.footer');
-        renderFooter(footer);  
-  
+      const header = document.querySelector('header.header');
+      renderHeader(header);
+
+      const footer = document.querySelector('footer.footer');
+      renderFooter(footer);
     </script>
-  
-</body>
+  </body>
 </html>
