--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopping Cart</title>
+    <title>Gearclub | Gaming gear</title>
+    <link rel="icon" type="image/x-icon" href="./assets/imgs/logo-only-figure-colored.png">
 
     <!-- Reset css -->
     <link
