--- a/admin/user.html
+++ b/admin/user.html
@@ -44,6 +44,9 @@
         </div>
     </div>
 
+    <!-- Redirect script -->
+    <script src="../assets/js/admin/redirect-script.js" type="module"></script>
+
     <script type="module">
         import { renderNavbar, renderSearchbar } from '/assets/js/admin/adminNav.js'
   
