--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gearclub | Gaming gear</title>
-    <link rel="icon" type="image/x-icon" href="./assets/imgs/logo-only-figure-colored.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/imgs/logo-only-figure-colored.png"
+    />
+
+    <!-- Allow http instead of only https -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
 
     <!-- Reset css -->
     <link
