--- a/admin/order.html
+++ b/admin/order.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./assets/imgs/logo-only-figure-colored.png"
+      href="../assets/imgs/logo-only-figure-colored.png"
     />
 
     <!-- Font awesome icom -->
