--- a/admin/product.html
+++ b/admin/product.html
@@ -25,6 +25,7 @@
       rel="stylesheet"
     />
 
+    <!-- Tabulator -->
     <link
       href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css"
       rel="stylesheet"
@@ -50,8 +51,11 @@
           >
         </div>
         <div class="search-bar"></div>
-        <div class="table">
-          <div id="table"></div>
+        
+        <div class="table-wrapper">
+          <div class="table">
+            <div id="table"></div>
+          </div>
         </div>
       </div>
     </div>
