--- a/account.html
+++ b/account.html
@@ -36,6 +36,10 @@
       rel="stylesheet"
     />
 
+    <!-- Notie -->
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <script src="https://unpkg.com/notie"></script>
+
     <!-- Toast -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
