--- a/refund.html
+++ b/refund.html
@@ -1,43 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gearclub | Gaming gear</title>
-    <link rel="icon" type="image/x-icon" href="./assets/imgs/logo-only-figure-colored.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/imgs/logo-only-figure-colored.png"
+    />
 
     <!-- Reset css -->
     <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Bootstrap icon -->
     <link
-        rel="stylesheet"
-        href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
+      rel="stylesheet"
+      href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
+    <!-- Notie -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/notie/dist/notie.min.css"
+    />
+    <script src="https://unpkg.com/notie"></script>
+
     <!-- Toast -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="./assets/css/commons/toastr.min.css" />
     <script src="./assets/js/commons/toastr.min.js"></script>
 
@@ -47,97 +64,116 @@
     <link rel="stylesheet" href="./assets/css/commons/header.css" />
     <link rel="stylesheet" href="./assets/css/commons/footer.css" />
     <link rel="stylesheet" href="./assets/css/commons/paragraph.css" />
-
-</head>
-<body>
+  </head>
+  <body>
     <div class="app">
-        <div class="sub-header">
-            <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
-    
-            <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
+      <div class="sub-header">
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
+
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
+      </div>
+
+      <header class="header"></header>
+
+      <section class="main-content">
+        <h1 class="text-center title" style="line-height: 1.4">
+          Chính sách hoàn tiền
+        </h1>
+
+        <div class="paragraph">
+          <h2 style="color: red">Chính sách hoàn tiền</h2>
+          <div style="text-align: center">
+            <img
+              src="./assets/imgs/policies/refund.jpg"
+              class="image"
+              style="max-width: 480px"
+            />
+          </div>
+          <h3>Điều kiện hoàn tiền</h3>
+          <ul>
+            <li>
+              Sản phẩm Gearclub giao đến bạn không đúng hoặc không đủ chủng
+              loại, số lượng mà bạn đã đặt hàng.
+            </li>
+            <li>Sản phẩm mà bạn đặt hết hàng.</li>
+          </ul>
+          <h3>Mức hoàn:</h3>
+          <ul>
+            <li>100% giá trị đơn hàng.</li>
+          </ul>
+          <h3>Lưu ý:</h3>
+          <ul>
+            <li>Mức hoàn được tính theo giá bán của sản phẩm trên hóa đơn.</li>
+            <li>Không hoàn phí quẹt thẻ và phí vận chuyển (nếu có)</li>
+            <li>Không áp dụng chính sách hoàn tiền cho hình thức trả góp.</li>
+          </ul>
+          <h2 style="color: red">Quy định xử lý hoàn tiền</h2>
+          <div style="text-align: center">
+            <img
+              src="./assets/imgs/policies/compliant.jpg"
+              class="image"
+              style="max-width: 480px"
+            />
+          </div>
+          <h3>Thời gian tiếp nhận yêu cầu hoàn tiền</h3>
+          <ul>
+            <li>8h30 đến 17h30 tất cả ngày trong tuần.</li>
+            <li>
+              Các yêu cầu hoàn tiền ngoài thời gian trên sẽ được ghi nhận và xử
+              lý vào ngày làm việc kế tiếp.
+            </li>
+          </ul>
+          <h3>Thời gian hoàn tiền</h3>
+          <p>
+            Đối với hình thức thanh toán tiền mặt, chuyển khoản, quẹt thẻ tại
+            cửa hàng:
+          </p>
+          <ul>
+            <li>3 ngày làm việc không tính thứ 7, chủ nhật và ngày lễ.</li>
+          </ul>
+          <p>Đối với hình thức thanh toán online và trả góp qua OnePay:</p>
+          <ul>
+            <li>Thời gian hoàn tiền dựa theo chính sách của OnePay.</li>
+          </ul>
+          <h3>Hình thức hoàn tiền</h3>
+          <p>
+            Đối với hình thức thanh toán tiền mặt, chuyển khoản, quẹt thẻ tại
+            cửa hàng:
+          </p>
+          <ul>
+            <li>Chuyển khoản.</li>
+          </ul>
+          <p>Đối với hình thức thanh toán online và trả góp qua OnePay:</p>
+          <ul>
+            <li>OnePay sẽ xử lý hoàn tiền giao dịch cho khách hàng tự động.</li>
+          </ul>
         </div>
+      </section>
 
-        <header class="header"></header>
-
-        <section class="main-content">
-            <h1 class="text-center title" style="line-height: 1.4;">Chính sách hoàn tiền</h1>
-
-            <div class="paragraph">
-                <h2 style="color:red">Chính sách hoàn tiền</h2>
-                <div style="text-align:center;">
-                    <img src="./assets/imgs/policies/refund.jpg" class="image" style="max-width: 480px;">
-                </div>
-                <h3>Điều kiện hoàn tiền</h3>
-                <ul>
-                    <li>Sản phẩm Gearclub giao đến bạn không đúng hoặc không đủ chủng loại, số lượng mà bạn đã đặt hàng.</li>
-                    <li>Sản phẩm mà bạn đặt hết hàng.</li>
-                </ul>
-                <h3>Mức hoàn:</h3>
-                <ul>
-                    <li>100% giá trị đơn hàng.</li>
-                </ul>
-                <h3>Lưu ý:</h3>
-                <ul>
-                    <li>Mức hoàn được tính theo giá bán của sản phẩm trên hóa đơn.</li>
-                    <li>Không hoàn phí quẹt thẻ và phí vận chuyển (nếu có)</li>
-                    <li>Không áp dụng chính sách hoàn tiền cho hình thức trả góp.</li>
-                </ul>
-                <h2 style="color: red">Quy định xử lý hoàn tiền</h2>
-                <div style="text-align:center;">
-                    <img src="./assets/imgs/policies/compliant.jpg" class="image" style="max-width: 480px;">
-                </div>
-                <h3>Thời gian tiếp nhận yêu cầu hoàn tiền</h3>
-                <ul>
-                    <li>8h30 đến 17h30 tất cả ngày trong tuần.</li>
-                    <li>Các yêu cầu hoàn tiền ngoài thời gian trên sẽ được ghi nhận và xử lý vào ngày làm việc kế tiếp.</li>
-                </ul>
-                <h3>Thời gian hoàn tiền</h3>
-                <p>Đối với hình thức thanh toán tiền mặt, chuyển khoản, quẹt thẻ tại cửa hàng:</p>
-                <ul>
-                    <li>3 ngày làm việc không tính thứ 7, chủ nhật và ngày lễ.</li>
-                </ul>
-                <p>Đối với hình thức thanh toán online và trả góp qua OnePay:</p>
-                <ul>
-                    <li>Thời gian hoàn tiền dựa theo chính sách của OnePay.</li>
-                </ul>
-                <h3>Hình thức hoàn tiền</h3>
-                <p>Đối với hình thức thanh toán tiền mặt, chuyển khoản, quẹt thẻ tại cửa hàng:</p>
-                <ul>
-                    <li>Chuyển khoản.</li>
-                </ul>
-                <p>Đối với hình thức thanh toán online và trả góp qua OnePay:</p>
-                <ul>
-                    <li>OnePay sẽ xử lý hoàn tiền giao dịch cho khách hàng tự động.</li>
-                </ul>
-            </div>
-        </section>
-
-        <footer class="footer"></footer>
+      <footer class="footer"></footer>
     </div>
 
     <script type="module">
-        import { renderHeader } from './assets/js/commons/header/header.js';
-        import { renderFooter } from './assets/js/commons/footer.js';
-  
-        const header = document.querySelector('header.header');
-        renderHeader(header);
+      import { renderHeader } from './assets/js/commons/header/header.js';
+      import { renderFooter } from './assets/js/commons/footer.js';
 
-        const footer = document.querySelector('footer.footer');
-        renderFooter(footer);  
-  
+      const header = document.querySelector('header.header');
+      renderHeader(header);
+
+      const footer = document.querySelector('footer.footer');
+      renderFooter(footer);
     </script>
-  
-</body>
+  </body>
 </html>
