--- a/signup.html
+++ b/signup.html
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gearclub | Gaming gear</title>
-    <link rel="icon" type="image/x-icon" href="./assets/imgs/logo-only-figure-colored.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/imgs/logo-only-figure-colored.png"
+    />
 
     <!-- Reset css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Font awesome icom -->
-    <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+    />
 
     <!-- Bootstrap icon -->
-    <link rel="stylesheet" href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
+    />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Notie -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/notie/dist/notie.min.css"
+    />
+    <script src="https://unpkg.com/notie"></script>
 
     <!-- Toast -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="./assets/css/commons/toastr.min.css" />
     <script src="./assets/js/commons/toastr.min.js"></script>
 
@@ -36,51 +64,50 @@
     <link rel="stylesheet" href="./assets/css/commons/header.css" />
     <link rel="stylesheet" href="./assets/css/commons/footer.css" />
     <link rel="stylesheet" href="./assets/css/commons/paragraph.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="app">
-        <div class="sub-header">
-            <ul class="sub-header__list">
-                <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-                <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-                <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-                <li class="sub-header__item">Giao hàng siêu tốc</li>
-                <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
+      <div class="sub-header">
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
 
-            <ul class="sub-header__list">
-                <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-                <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-                <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-                <li class="sub-header__item">Giao hàng siêu tốc</li>
-                <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
-        </div>
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
+      </div>
 
-        <header class="header"></header>
+      <header class="header"></header>
 
-        <section class="main-content"></section>
+      <section class="main-content"></section>
 
-        <footer class="footer"></footer>
+      <footer class="footer"></footer>
     </div>
 
     <script type="module">
-        import { renderHeader } from './assets/js/commons/header/header.js';
-        import { renderFooter } from './assets/js/commons/footer.js';
+      import { renderHeader } from './assets/js/commons/header/header.js';
+      import { renderFooter } from './assets/js/commons/footer.js';
 
-        const header = document.querySelector('header.header');
-        renderHeader(header);
+      const header = document.querySelector('header.header');
+      renderHeader(header);
 
-        const footer = document.querySelector('footer.footer');
-        renderFooter(footer);
+      const footer = document.querySelector('footer.footer');
+      renderFooter(footer);
     </script>
     <script type="module">
-        import { renderSectionRegister } from './assets/js/register/section-register.js';
-        const mainDOMNode = document.querySelector('.main-content');
+      import { renderSectionRegister } from './assets/js/register/section-register.js';
+      const mainDOMNode = document.querySelector('.main-content');
 
-        renderSectionRegister(mainDOMNode);
+      renderSectionRegister(mainDOMNode);
     </script>
-</body>
-
+  </body>
 </html>
