--- a/payment.html
+++ b/payment.html
@@ -209,9 +209,9 @@
         }
       }
 
-      @media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 1023px) {
         form {
-          width: 80vw;
+          width: 100%;
           min-width: initial;
         }
       }
